--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+ .results-block {
+     display: in-block;
+ }
+
+ .no-padding {
+     padding: 0 !important;
+ }
