--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -16,12 +16,13 @@
     </div>
 <% end %>
 </div>
-<div class="well results-block">
-<strong>Symbol: </strong><%= @stock.ticker %>
-<strong>Name: </strong><%= @stock.name %>
-<strong>Price: </strong><%= @stock.last_price %>
 
+<% if @stock %>
+    <div class="well results-block">
+    <strong>Symbol: </strong><%= @stock.ticker %>
+    <strong>Name: </strong><%= @stock.name %>
+    <strong>Price: </strong><%= @stock.last_price %>
 </div>
-
+<% end %>
 
 
